--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
                       <h3>Sign Up</h3>
                       <p>If you would like to become a scammer, register now!</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputText1" placeholder="Name & Surname">
+                            <input type="text" class="form-control" placeholder="Name & Surname" id="nameSurname">
                         </div>
                         <div class="form-group">
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" id="email">
                       </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputText2" placeholder="Contact Number">
+                            <input type="number" class="form-control" placeholder="Contact Number" id="contactNumber">
                         </div>
                         <div class="form-group">
-                          <select class="form-control" id="exampleFormControlSelect1">
+                          <select class="form-control" id="subject">
                             <option>Select a Subject</option>
                             <option>Ux Design (bring pop-up adds)</option>
                             <option>Development (bring tissues for losers)</option>
@@ -140,13 +140,13 @@
                           </select>
                         </div>
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Send me spam newsletters!!!</label>
+                            <input type="checkbox" class="form-check-input" id="spamBox">
+                            <label class="form-check-label" for="spamBox">Send me spam newsletters!</label>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password" id="password">
                         </div>
-                        <button type="submit" class="btn btn-primary">Register Account</button>
+                        <button type="button" class="btn btn-primary" onclick="registerStudent()">Register Account</button>
                     </form>
                 </div>
             
